[package]
name = "textworld-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = {  version = "1.43.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
futures-macro = "0.3.31"
